salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Acquired_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Date__c</fullName>
    <label>Acquired Date</label>
    <type>Date</type>
</CustomField>