salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Actual_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Project_End_Date__c</fullName>
    <label>Actual Project End Date</label>
    <type>Date</type>
</CustomField>