salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Adders_kW__c.field-meta.xml
<CustomField>
    <fullName>Adders_kW__c</fullName>
    <description>was Demand Management Kw Savings</description>
    <label>Adders kW</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>