salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Adders_kW_Incentive_Uncapped__c.field-meta.xml
<CustomField>
    <fullName>Adders_kW_Incentive_Uncapped__c</fullName>
    <description>Demand Management Incentive (Uncapped)</description>
    <label>Adders kW Incentive (Uncapped)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>