salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Savings__c</fullName>
    <formula>((Total_Therm_Savings__c * 1) + (Total_kWH_Savings__c  * 0.07))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>