salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Application_Has_Electric__c.field-meta.xml
<CustomField>
    <fullName>Application_Has_Electric__c</fullName>
    <formula>OR( ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'B'), ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'E') )</formula>
    <label>Application Has Electric</label>
    <type>Checkbox</type>
</CustomField>