salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Application_Has_Gas__c.field-meta.xml
<CustomField>
    <fullName>Application_Has_Gas__c</fullName>
    <description>Check to see if Account Eligibility is Both or Gas</description>
    <formula>OR( ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'B'), ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'G') )</formula>
    <label>Application Has Gas</label>
    <type>Checkbox</type>
</CustomField>