salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Apply_For_Additional_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Apply_For_Additional_Incentives__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you like to apply for additional incentives
for Early Replacement or Extended Life?</description>
    <label>Apply For Additional Incentives</label>
    <type>Checkbox</type>
</CustomField>