salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generic field used to record whether there is a condition on the application that requires approval. Business logic varies by specific use case and it is left open ended on purpose. Setting this field to TRUE will trigger the approval process.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>