salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Associated_Lead__c.field-meta.xml
<CustomField>
    <fullName>Associated_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead associated with the estimate/project</inlineHelpText>
    <label>Associated Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>