salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ATTN_In_Care_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ATTN_In_Care_Last_Name__c</fullName>
    <label>ATTN In Care Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>