salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Base_File_Name_for_eSignature_Files__c.field-meta.xml
<CustomField>
    <fullName>Base_File_Name_for_eSignature_Files__c</fullName>
    <formula>TEXT(YEAR(TODAY())) + RIGHT("0" + TEXT(MONTH(TODAY())),2) + RIGHT("0" + TEXT(DAY(TODAY())),2) + TEXT(HOUR(TIMEVALUE(Now()))) + RIGHT("0" + TEXT(MINUTE(TIMENOW())),2) + RIGHT("0" + TEXT(SECOND(TIMENOW())),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base File Name for eSignature Files</label>
    <type>Text</type>
</CustomField>