salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/BD_Notes__c.field-meta.xml
<CustomField>
    <fullName>BD_Notes__c</fullName>
    <label>BD Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>