salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/BDM_Email__c.field-meta.xml
<CustomField>
    <fullName>BDM_Email__c</fullName>
    <formula>Business_Development_Manager__r.Email</formula>
    <label>BDM Email</label>
    <type>Text</type>
</CustomField>