salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Automotive/Transportation Service or Repair Facility</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Cafeteria</fullName>
            </value>
            <value>
                <fullName>College - Community</fullName>
            </value>
            <value>
                <fullName>College - University</fullName>
            </value>
            <value>
                <fullName>Commercial Condos</fullName>
            </value>
            <value>
                <fullName>Convenience Stores</fullName>
            </value>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Court House</fullName>
            </value>
            <value>
                <fullName>Dormitory</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Exercise Center</fullName>
            </value>
            <value>
                <fullName>Grocery/Food Store</fullName>
            </value>
            <value>
                <fullName>Gymnasium</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Industrial/Manufacturing</fullName>
            </value>
            <value>
                <fullName>Laundromats</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Lodging - Hotel</fullName>
            </value>
            <value>
                <fullName>Lodging - Motel</fullName>
            </value>
            <value>
                <fullName>Mall Concourse</fullName>
            </value>
            <value>
                <fullName>Medical Offices</fullName>
            </value>
            <value>
                <fullName>Motion Picture Theatre</fullName>
            </value>
            <value>
                <fullName>Multi-Family Common Area</fullName>
            </value>
            <value>
                <fullName>Multi-Family High-Rise</fullName>
            </value>
            <value>
                <fullName>Multi-Family Low-Rise</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Nursing Homes High-Rise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>