salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CC_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CC_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Submitted</label>
    <type>Checkbox</type>
</CustomField>