salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_ConEdison_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CE_ConEdison_Reviewer__c</fullName>
    <label>ConEdison Reviewer - POL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>