salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Engineering_Review_Assignment_date__c.field-meta.xml
<CustomField>
    <fullName>CE_Engineering_Review_Assignment_date__c</fullName>
    <label>Initial Technical Review Assignment date</label>
    <type>Date</type>
</CustomField>