salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Final_Engineering_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>CE_Final_Engineering_Review_Notes__c</fullName>
    <label>Final Technical Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>