salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Final_Technical_Review_Cured_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Final_Technical_Review_Cured_Date__c</fullName>
    <label>Final Technical Review Cured Date</label>
    <type>Date</type>
</CustomField>