salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Initiate_the_Pre_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CE_Initiate_the_Pre_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate the Pre-Inspection</label>
    <type>Checkbox</type>
</CustomField>