salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Low_Demand_indicator__c.field-meta.xml
<CustomField>
    <fullName>CE_Low_Demand_indicator__c</fullName>
    <formula>IF (vlocity_cmt__AccountId__r.CE_Annual_Average_of_Billed_Demand__c &lt; Program__r.CE_Low_demand_kW_eligibility__c,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Demand indicator</label>
    <type>Checkbox</type>
</CustomField>