salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_MF_Low_Income__c.field-meta.xml
<CustomField>
    <fullName>CE_MF_Low_Income__c</fullName>
    <formula>if ( vlocity_cmt__AccountId__r.CE_MF_Low_Income__c =TRUE,"Low Income", "Non-low Income")</formula>
    <label>MF Low Income</label>
    <type>Text</type>
</CustomField>