salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_MF_Project_type__c.field-meta.xml
<CustomField>
    <fullName>CE_MF_Project_type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common Area</fullName>
            </value>
            <value>
                <fullName>In Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>