salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_MTP_90_days_Override__c.field-meta.xml
<CustomField>
    <fullName>CE_MTP_90_days_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTP 180 days Override</label>
    <type>Checkbox</type>
</CustomField>