salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_MTP_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_MTP_Sent_Date__c</fullName>
    <label>MTP Sent Date</label>
    <type>Date</type>
</CustomField>