salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Notes__c.field-meta.xml
<CustomField>
    <fullName>CE_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>