salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Notes_to_Inspector__c.field-meta.xml
<CustomField>
    <fullName>CE_Notes_to_Inspector__c</fullName>
    <label>Notes to Inspector</label>
    <type>TextArea</type>
</CustomField>