salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_POL_is_Approved__c.field-meta.xml
<CustomField>
    <fullName>CE_POL_is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POL is Approved</label>
    <type>Checkbox</type>
</CustomField>