salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_QAQC_PreInspectionAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>CE_QAQC_PreInspectionAssignmentDate__c</fullName>
    <label>QA/QC Pre-Inspection Assignment Date</label>
    <type>Date</type>
</CustomField>