salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Selected_for_QA_QC_Pre_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CE_Selected_for_QA_QC_Pre_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for QA/QC Pre-Inspection</label>
    <type>Checkbox</type>
</CustomField>