salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_SEP_Account__c.field-meta.xml
<CustomField>
    <fullName>CE_SEP_Account__c</fullName>
    <formula>vlocity_cmt__AccountId__r.CE_SEPAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEP Account</label>
    <type>Checkbox</type>
</CustomField>