salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Validation_Override__c.field-meta.xml
<CustomField>
    <fullName>CE_Validation_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Override</label>
    <type>Checkbox</type>
</CustomField>