salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CE_Validation_Override_Set__c.field-meta.xml
<CustomField>
    <fullName>CE_Validation_Override_Set__c</fullName>
    <label>Validation override approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>