salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/CO2_Emissions__c.field-meta.xml
<CustomField>
    <fullName>CO2_Emissions__c</fullName>
    <formula>( Total_kWH_Savings__c *  0.000709) +  (Total_Therm_Savings__c * 0.0053)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO2 Emissions</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>