salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Completing_Project_for_ConEd_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Completing_Project_for_ConEd_Incentives__c</fullName>
    <label>Completing Project for ConEd Incentives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>