salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ConEd_Account_Number_Electric__c.field-meta.xml
<CustomField>
    <fullName>ConEd_Account_Number_Electric__c</fullName>
    <formula>IF(OR( ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'B'), ISPICKVAL( vlocity_cmt__AccountId__r.CE_C_I_Eligible__c, 'E') ),  vlocity_cmt__AccountId__r.AccountNumber , '')</formula>
    <label>ConEd Account Number Electric</label>
    <type>Text</type>
</CustomField>