salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ConEd_Tool_or_Custom_Analysis_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>ConEd_Tool_or_Custom_Analysis_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConEd Tool or Custom Analysis Uploaded</label>
    <type>Checkbox</type>
</CustomField>