salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/ConEdison_Reviewer_Final_IOL__c.field-meta.xml
<CustomField>
    <fullName>ConEdison_Reviewer_Final_IOL__c</fullName>
    <label>ConEdison Reviewer - Final IOL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>