salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Conga_Sign_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sign_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Sign Transaction</label>
    <referenceTo>APXT_CongaSign__Transaction__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>