salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Conga_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Id__c</fullName>
    <formula>IF( Energy_Efficiency_Program__r.Name = 'Commercial and Industrial',  IF( ISPICKVAL(Payee_Type__c, 'Customer'),  Energy_Efficiency_Program__r.Conga_eSign_Template_ID__c ,  Energy_Efficiency_Program__r.Conga_eSign_Template_PC_ID__c ) , 'False')</formula>
    <label>Conga Template Id</label>
    <type>Text</type>
</CustomField>