salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Consumption_Savings_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Savings_Achieved__c</fullName>
    <label>Consumption Savings Achieved</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>