salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Contractor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Last_Name__c</fullName>
    <label>Contractor Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>