salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>