salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <label>Customer First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>