salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Full_Name__c</fullName>
    <formula>Customer_First_Name__c &amp; " " &amp; Customer_Last_Name__c</formula>
    <label>Customer Full Name</label>
    <type>Text</type>
</CustomField>