salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Payee Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Customer Payee Account)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>