salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Proposal_Or_Statement_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Customer_Proposal_Or_Statement_of_Work__c</fullName>
    <formula>IF( OR( SOW_Uploaded__c = TRUE,  Customer_Proposal_Uploaded__c = TRUE), TRUE, FALSE)</formula>
    <label>Customer Proposal Or Statement of Work</label>
    <type>Checkbox</type>
</CustomField>