salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Secondary_Phone__c</fullName>
    <label>Customer Secondary Phone</label>
    <type>Phone</type>
</CustomField>