salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Customer_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Title__c</fullName>
    <label>Customer Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>