salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Cut_Sheets_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cut_Sheets_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Sheets Uploaded</label>
    <type>Checkbox</type>
</CustomField>