salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Date_Assigned_Initial_Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned_Initial_Peer_Review__c</fullName>
    <label>Date Assigned-Initial Peer Review</label>
    <type>Date</type>
</CustomField>