salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Date_Sent_Cogna_eSign__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_Cogna_eSign__c</fullName>
    <description>date that the esignature was sent</description>
    <label>Date Sent Cogna eSign</label>
    <type>Date</type>
</CustomField>