salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Demand_Management_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Demand_Management_Incentive__c</fullName>
    <label>Adders kW Incentive (Uncapped)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>