salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Documentation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Received_Date__c</fullName>
    <label>Documentation Received Date</label>
    <type>Date</type>
</CustomField>