salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/EEDM_Code__c.field-meta.xml
<CustomField>
    <fullName>EEDM_Code__c</fullName>
    <formula>vlocity_cmt__AccountId__r.EEDM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EEDM Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>