salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Energy_Saving_Analysis_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Energy_Saving_Analysis_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Conga ESign Clean Heat Application Application Requirment files uploaded section.</description>
    <label>Energy Saving Analysis Uploaded</label>
    <type>Checkbox</type>
</CustomField>