salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Engineering_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Review_Result__c</fullName>
    <label>Initial Technical Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Discrepancy Found</fullName>
            </value>
            <value>
                <fullName>Cured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>