salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/eSignature_Countdown__c.field-meta.xml
<CustomField>
    <fullName>eSignature_Countdown__c</fullName>
    <formula>30 - ABS( TODAY()-Date_Sent_Cogna_eSign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eSignature Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>