salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Estimated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payment__c</fullName>
    <label>Estimated Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>