salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Estimated_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Start_Date__c</fullName>
    <label>Estimated Project Start Date</label>
    <type>Date</type>
</CustomField>