salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/EstimateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateId__c</fullName>
    <label>EstimateId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>