salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Existing_Buildings_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Existing_Buildings_Upgrade__c</fullName>
    <description>Clean Heat Existing Building field.  Field used for Conga ESign query and template.</description>
    <label>Existing Buildings Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ComprehensiveUpgrade</fullName>
            </value>
            <value>
                <fullName>PhasedUpgradeRetrofit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>