salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Expected_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Project_Start_Date__c</fullName>
    <label>Expected Project Start Date</label>
    <type>Date</type>
</CustomField>