salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Final_IOL_is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Final_IOL_is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final IOL is Approved</label>
    <type>Checkbox</type>
</CustomField>