salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Final_Review_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Requested_Date__c</fullName>
    <label>Final Review Requested Date</label>
    <type>Date</type>
</CustomField>