salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Final_Tech_Review_kW_Savings__c.field-meta.xml
<CustomField>
    <fullName>Final_Tech_Review_kW_Savings__c</fullName>
    <label>Final Review kW Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>