salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Final_Tech_Review_Project_Costs__c.field-meta.xml
<CustomField>
    <fullName>Final_Tech_Review_Project_Costs__c</fullName>
    <label>Final Review Project Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>