salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Final_Technical_Review_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Technical_Review_Complete_Date__c</fullName>
    <label>Final Technical Review Complete Date</label>
    <type>Date</type>
</CustomField>