salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Financial_Aid_Paid__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Paid__c</fullName>
    <label>Financial Aid Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>