salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/FIOL_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FIOL_Sent_Date__c</fullName>
    <label>FIOL Sent Date</label>
    <type>Date</type>
</CustomField>