salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Gas_POET_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Gas_POET_Incentive__c</fullName>
    <formula>IF( Total_Therm_Savings__c > 0, IF( Total_kWH_Savings__c > 0, ( Total_Therms_MMBTU__c  / Total_MMBTU__c ) * Total_Project_Incentive_with_Capping__c, Total_Project_Incentive_with_Capping__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gas POET Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>