salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Ground_Source_Heat_Pump__c.field-meta.xml
<CustomField>
    <fullName>Ground_Source_Heat_Pump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ground Source Heat Pump</label>
    <type>Checkbox</type>
</CustomField>