salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Has_Created_Pre_Installation_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Has_Created_Pre_Installation_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Created Pre-Installation Inspection</label>
    <type>Checkbox</type>
</CustomField>