salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Has_Created_SOW_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Created_SOW_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Created SOW Task</label>
    <type>Checkbox</type>
</CustomField>