salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Heat_Pump_Water_Heater__c.field-meta.xml
<CustomField>
    <fullName>Heat_Pump_Water_Heater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heat Pump Water Heater</label>
    <type>Checkbox</type>
</CustomField>