salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/Heating_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Heating_Fuel__c</fullName>
    <label>Heating Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>District Steam</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>