salesforce_sfdx_QA/main/default/objects/vlocity_cmt__Application__c/fields/How_Did_You_Hear_About_Program_Specify__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Program_Specify__c</fullName>
    <label>How Did You Hear About Program Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>